[gd_scene load_steps=57 format=2]

[ext_resource path="res://Player/Player3D/Doll3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/StageScene3D/BaseStageScene3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Props/platform.png" type="Texture" id=3]
[ext_resource path="res://Player/StageScene3D/Scenes2/Grope.gd" type="Script" id=4]

[sub_resource type="AnimationNodeAnimation" id=446]
animation = "CuffedArms-loop"

[sub_resource type="AnimationNodeBlend2" id=447]
filter_enabled = true
filters = [ "Doll3D/Skeleton:Arm.L", "Doll3D/Skeleton:Arm.R", "Doll3D/Skeleton:ForeArm.L", "Doll3D/Skeleton:ForeArm.R", "Doll3D/Skeleton:Hand.L", "Doll3D/Skeleton:Hand.R" ]

[sub_resource type="AnimationNodeAnimation" id=474]
animation = "GropeFrontFast_1-loop"

[sub_resource type="AnimationNodeAnimation" id=475]
animation = "GropeFrontFast_1-loop"

[sub_resource type="AnimationNodeAnimation" id=498]
animation = "GropeFrontPat_1-loop"

[sub_resource type="AnimationNodeAnimation" id=499]
animation = "GropeFrontSelfFem_1-loop"

[sub_resource type="AnimationNodeAnimation" id=500]
animation = "GropeFrontSelfMale_1-loop"

[sub_resource type="AnimationNodeAnimation" id=501]
animation = "GropeFrontTease_1-loop"

[sub_resource type="AnimationNodeAnimation" id=476]
animation = "GropeFront_1-loop"

[sub_resource type="AnimationNodeAnimation" id=477]
animation = "GropeFront_1-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=478]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=479]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=480]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=481]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=482]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=483]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=502]

[sub_resource type="AnimationNodeStateMachineTransition" id=503]

[sub_resource type="AnimationNodeStateMachineTransition" id=504]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=505]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=506]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=507]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=508]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=509]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=484]
states/GropeFrontFast_1-loop/node = SubResource( 475 )
states/GropeFrontFast_1-loop/position = Vector2( 393, 175 )
"states/GropeFrontFast_1-loop 2/node" = SubResource( 474 )
"states/GropeFrontFast_1-loop 2/position" = Vector2( 669, 260 )
states/GropeFrontPat_1-loop/node = SubResource( 498 )
states/GropeFrontPat_1-loop/position = Vector2( -126, 144 )
states/GropeFrontSelfFem_1-loop/node = SubResource( 499 )
states/GropeFrontSelfFem_1-loop/position = Vector2( 113, 236 )
states/GropeFrontSelfMale_1-loop/node = SubResource( 500 )
states/GropeFrontSelfMale_1-loop/position = Vector2( 57, 307 )
states/GropeFrontTease_1-loop/node = SubResource( 501 )
states/GropeFrontTease_1-loop/position = Vector2( 16, -9 )
states/GropeFront_1-loop/node = SubResource( 477 )
states/GropeFront_1-loop/position = Vector2( 491, 58 )
"states/GropeFront_1-loop 2/node" = SubResource( 476 )
"states/GropeFront_1-loop 2/position" = Vector2( 669, 175 )
transitions = [ "GropeFront_1-loop", "GropeFrontFast_1-loop", SubResource( 478 ), "GropeFrontFast_1-loop", "GropeFront_1-loop", SubResource( 479 ), "GropeFront_1-loop", "GropeFront_1-loop 2", SubResource( 480 ), "GropeFront_1-loop 2", "GropeFront_1-loop", SubResource( 481 ), "GropeFront_1-loop 2", "GropeFrontFast_1-loop 2", SubResource( 482 ), "GropeFrontFast_1-loop 2", "GropeFront_1-loop 2", SubResource( 483 ), "GropeFrontTease_1-loop", "GropeFront_1-loop", SubResource( 502 ), "GropeFront_1-loop", "GropeFrontTease_1-loop", SubResource( 503 ), "GropeFrontTease_1-loop", "GropeFrontSelfFem_1-loop", SubResource( 504 ), "GropeFrontSelfFem_1-loop", "GropeFrontTease_1-loop", SubResource( 505 ), "GropeFrontTease_1-loop", "GropeFrontSelfMale_1-loop", SubResource( 506 ), "GropeFrontSelfMale_1-loop", "GropeFrontTease_1-loop", SubResource( 507 ), "GropeFrontTease_1-loop", "GropeFrontPat_1-loop", SubResource( 508 ), "GropeFrontPat_1-loop", "GropeFrontTease_1-loop", SubResource( 509 ) ]
start_node = "GropeFront_1-loop"
graph_offset = Vector2( -338, -95 )

[sub_resource type="AnimationNodeBlendTree" id=485]
graph_offset = Vector2( -348.69, 38.9555 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 484 )
nodes/StateMachine/position = Vector2( 156.31, 108.956 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation", "output", 0, "CuffsBlend" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=460]

[sub_resource type="AnimationNodeAnimation" id=486]
animation = "GropeFrontFast_2-loop"

[sub_resource type="AnimationNodeAnimation" id=510]
animation = "GropeFrontPat_2-loop"

[sub_resource type="AnimationNodeAnimation" id=511]
animation = "GropeFrontSelfWatch_2-loop"

[sub_resource type="AnimationNodeAnimation" id=512]
animation = "GropeFrontSelfWatch_2-loop"

[sub_resource type="AnimationNodeAnimation" id=487]
animation = "GropeFrontStrokeFast_2-loop"

[sub_resource type="AnimationNodeAnimation" id=488]
animation = "GropeFrontStroke_2-loop"

[sub_resource type="AnimationNodeAnimation" id=513]
animation = "GropeFrontTease_2-loop"

[sub_resource type="AnimationNodeAnimation" id=489]
animation = "GropeFront_2-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=490]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=491]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=492]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=493]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=494]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=495]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=514]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=515]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=516]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=517]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=518]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=519]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=520]

[sub_resource type="AnimationNodeStateMachineTransition" id=521]

[sub_resource type="AnimationNodeStateMachine" id=496]
states/GropeFrontFast_2-loop/node = SubResource( 486 )
states/GropeFrontFast_2-loop/position = Vector2( 321, 183 )
states/GropeFrontPat_2-loop/node = SubResource( 510 )
states/GropeFrontPat_2-loop/position = Vector2( -213, 158 )
states/GropeFrontSelfWatch_2-loop/node = SubResource( 512 )
states/GropeFrontSelfWatch_2-loop/position = Vector2( 202, 265 )
"states/GropeFrontSelfWatch_2-loop 2/node" = SubResource( 511 )
"states/GropeFrontSelfWatch_2-loop 2/position" = Vector2( 110, 331 )
states/GropeFrontStrokeFast_2-loop/node = SubResource( 487 )
states/GropeFrontStrokeFast_2-loop/position = Vector2( 608, 274 )
states/GropeFrontStroke_2-loop/node = SubResource( 488 )
states/GropeFrontStroke_2-loop/position = Vector2( 608, 183 )
states/GropeFrontTease_2-loop/node = SubResource( 513 )
states/GropeFrontTease_2-loop/position = Vector2( 70, 59 )
states/GropeFront_2-loop/node = SubResource( 489 )
states/GropeFront_2-loop/position = Vector2( 468, 80 )
transitions = [ "GropeFront_2-loop", "GropeFrontFast_2-loop", SubResource( 490 ), "GropeFrontFast_2-loop", "GropeFront_2-loop", SubResource( 491 ), "GropeFront_2-loop", "GropeFrontStroke_2-loop", SubResource( 492 ), "GropeFrontStroke_2-loop", "GropeFront_2-loop", SubResource( 493 ), "GropeFrontStroke_2-loop", "GropeFrontStrokeFast_2-loop", SubResource( 494 ), "GropeFrontStrokeFast_2-loop", "GropeFrontStroke_2-loop", SubResource( 495 ), "GropeFrontTease_2-loop", "GropeFrontSelfWatch_2-loop", SubResource( 514 ), "GropeFrontSelfWatch_2-loop", "GropeFrontTease_2-loop", SubResource( 515 ), "GropeFrontTease_2-loop", "GropeFrontSelfWatch_2-loop 2", SubResource( 516 ), "GropeFrontSelfWatch_2-loop 2", "GropeFrontTease_2-loop", SubResource( 517 ), "GropeFrontPat_2-loop", "GropeFrontTease_2-loop", SubResource( 518 ), "GropeFrontTease_2-loop", "GropeFrontPat_2-loop", SubResource( 519 ), "GropeFrontTease_2-loop", "GropeFront_2-loop", SubResource( 520 ), "GropeFront_2-loop", "GropeFrontTease_2-loop", SubResource( 521 ) ]
start_node = "GropeFront_2-loop"
graph_offset = Vector2( -288, -41 )

[sub_resource type="AnimationNodeBlendTree" id=497]
graph_offset = Vector2( -322.532, 74.6842 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 496 )
nodes/StateMachine/position = Vector2( 160, 140 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation", "output", 0, "CuffsBlend" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=473]

[node name="Grope" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.317465, -1.77462 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1, 1, 1022, 62 )

[node name="Doll3D" parent="." index="1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.324891, -0.120824, 0 )

[node name="Doll3D2" parent="." index="2" instance=ExtResource( 1 )]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, -0.324891, -0.120824, 0 )

[node name="AnimationTree" type="AnimationTree" parent="." index="3"]
tree_root = SubResource( 485 )
anim_player = NodePath("../Doll3D/DollSkeleton2/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 460 )

[node name="AnimationTree2" type="AnimationTree" parent="." index="4"]
tree_root = SubResource( 497 )
anim_player = NodePath("../Doll3D2/DollSkeleton2/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 473 )

[editable path="Doll3D"]
[editable path="Doll3D/DollSkeleton"]
[editable path="Doll3D/DollSkeleton2"]
[editable path="Doll3D2"]
[editable path="Doll3D2/DollSkeleton"]
[editable path="Doll3D2/DollSkeleton2"]
